# hexen-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  gradle.properties  local.properties
app/jni/: CMakeLists.txt
app/jni/SDL2/android-project/: build.gradle  local.properties
app/jni/src/: CMakeLists.txt  main.cpp
app/jni/src/components/: CMakeLists.txt  Component.h  IComponent.h
app/jni/src/core/: CMakeLists.txt  Types.h
app/jni/src/entity/: Entity.cpp
app/jni/src/pool/: BaseComponentPool.h  BasePool.h  CMakeLists.txt  Pool.cpp  Pool.h
app/jni/submodules/: CMakeLists.txt
client/: CMakeLists.txt
client/android/: build.gradle
client/android/app/: build.gradle
client/android/gradle/wrapper/: gradle-wrapper.properties
client/src/: CMakeLists.txt  main.cpp
client/src/application/: Application.cpp  Application.hpp
editor/: CMakeLists.txt
editor/shaders/: BaseQuadFragment.glsl  BaseQuadVertex.glsl  BaseVertexShader.glsl  DebugLineFragmentShader.glsl  DebugLineFragmnentShader.glsl  GridFragmentShader.glsl  GridVertexShader.glsl
editor/src/: Application.rc  CMakeLists.txt  main.cpp
editor/src/application/: Application.cpp  Application.h  Application.hpp  EditorGameLoop.cpp  EditorGameLoop.h  EditorGameLoop.hpp
editor/src/components/: CMakeLists.txt  DebugGridComponent.cpp  DebugGridComponent.h  EditorCameraComponent.cpp  EditorCameraComponent.hpp
editor/src/components/debug_rendering/: CheckerboardQuadComponent.cpp  CheckerboardQuadComponent.hpp  DebugGridComponent.cpp  DebugGridComponent.h  DebugGridComponent.hpp  DrawCheckerboardQuad.cpp  DrawCheckerboardQuad.hpp  DrawGridCommand.cpp  DrawGridCommand.hpp  GridComponent.cpp  GridComponent.hpp  ImageComponent.cpp  ImageComponent.hpp
editor/src/gui/: CMakeLists.txt  Dockspace.cpp  Dockspace.h  Dockspace.hpp  EditorGUI.cpp  EditorGUI.h  EditorGUI.hpp  GUIWindow.cpp  GUIWindow.h  IconsFontAwesome5.hpp  SceneWindow.cpp  SceneWindow.h  Style.cpp  Style.h  Style.hpp
editor/src/gui/editors_windows/: AssetsIcon.cpp  AssetsIcon.h  AssetsIcon.hpp  AssetsWindow.cpp  AssetsWindow.h  AssetsWindow.hpp  CMakeLists.txt  ContentDrawer.cpp  ContentDrawer.hpp  CopyingFilesStatus.cpp  CopyingFilesStatus.h  CopyingFilesWindow.cpp  CopyingFilesWindow.h  DeleteFileWindow.cpp  DeleteFileWindow.h  DeleteSelectedFilesWindow.cpp  DeleteSelectedFilesWindow.h  FramebufferWindow.cpp  FramebufferWindow.h  FramebufferWindow.hpp  GUIWindow.cpp  GUIWindow.h  GUIWindow.hpp  MainMenuBar.cpp  MainMenuBar.h  MainMenuBar.hpp  MessageBox.cpp  MessageBox.h  MessageBox.hpp  NewProjectWindow.cpp  NewProjectWindow.h  SceneHierarchyWindow.cpp  SceneHierarchyWindow.h  SceneHierarchyWindow.hpp  SceneWindow.cpp  SceneWindow.h  SceneWindow.hpp  Shortcuts.cpp  Shortcuts.h  Shortcuts.hpp  (+2 more)
editor/src/project/: Project.cpp  Project.h  Project.hpp
editor/src/systems/: CMakeLists.txt  DebugRenderSystem.cpp  DebugRenderSystem.h  DebugRenderSystem.hpp  EditorRenderSystem.cpp  EditorRenderSystem.hpp  EditorSystemsManager.cpp  EditorSystemsManager.h  EditorSystemsManager.hpp
editor/submodules/: CMakeLists.txt
editor/themes/: editor_theme.json
engine/: CMakeLists.txt
engine/src/: CMakeLists.txt  main.cpp
engine/src/components/: CMakeLists.txt  Component.h  Component.hpp  ComponentContainer.hpp
engine/src/components/camera/: CameraComponent.cpp  CameraComponent.h  CameraComponent.hpp
engine/src/components/graphics/: RenderComponent.cpp  RenderComponent.h  RenderComponent.hpp  SpriteComponent.cpp  SpriteComponent.h  SpriteComponent.hpp  SpriteInstancedComponent.cpp  SpriteInstancedComponent.h  SpriteInstancedComponent.hpp  TilesetAsset.cpp  TilesetAsset.hpp
engine/src/components/transform/: TransformComponent.cpp  TransformComponent.h  TransformComponent.hpp
engine/src/core/: CMakeLists.txt  Serialization.h  Serialization.hpp  Types.h  Types.hpp
engine/src/core/application/: Application.cpp  Application.h  Application.hpp  GameLoop.cpp  GameLoop.h  GameLoop.hpp  Settings.cpp  Settings.h  Settings.hpp
engine/src/core/assets/: AssetsStorage.cpp  AssetsStorage.hpp  IAsset.hpp
engine/src/core/exceptions/: ComponentNotFound.cpp  ComponentNotFound.h  ComponentNotFound.hpp  MappingNotFound.cpp  MappingNotFound.hpp
engine/src/core/graphics/: CMakeLists.txt  ElementsBufferObject.cpp  ElementsBufferObject.h  ElementsBufferObject.hpp  FrameBufferObject.cpp  FrameBufferObject.h  FrameBufferObject.hpp  Graphics.h  Graphics.hpp  RectangleData.h  RectangleData.hpp  RenderBufferObject.cpp  RenderBufferObject.h  RenderBufferObject.hpp  VertexArrayObject.cpp  VertexArrayObject.h  VertexArrayObject.hpp  VertexAttributes.cpp  VertexAttributes.h  VertexAttributes.hpp  VertexBufferObject.cpp  VertexBufferObject.h  VertexBufferObject.hpp
engine/src/core/input_devices/: CMakeLists.txt  Gamepad.cpp  Gamepad.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.h  Mouse.hpp
engine/src/core/level/: Level.cpp  Level.h
engine/src/core/memory_pool/: AllocatedObject.cpp  AllocatedObject.h  AllocatedObject.hpp  MemoryPool.cpp  MemoryPool.h  MemoryPool.hpp
engine/src/core/scene/: Grid.cpp  Grid.h  Grid.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp
engine/src/entity/: CMakeLists.txt  Entity.cpp  Entity.h
engine/src/graphics/: CMakeLists.txt
engine/src/gui/: CMakeLists.txt  IGUI.h  IGUI.hpp
engine/src/profiling/: CMakeLists.txt  Profiling.h  Profiling.hpp
engine/src/systems/: CMakeLists.txt  GameLoop.cpp  GameLoop.hpp  IGamePlaySystem.h  IGamePlaySystem.hpp  IRenderSystem.h  IRenderSystem.hpp  ISystem.h  InputHelper.cpp  InputHelper.hpp  InputSystem.cpp  InputSystem.h  InputSystem.hpp  RenderSystem.cpp  RenderSystem.h  RenderSystem.hpp  SystemManager.cpp  SystemManager.h  SystemsManager.cpp  SystemsManager.h  SystemsManager.hpp  TaskSystem.cpp  TaskSystem.h  TaskSystem.hpp
engine/src/threading/: CMakeLists.txt  TaskSystem.cpp  TaskSystem.hpp
engine/submodules/: CMakeLists.txt
engine/submodules/boost_context/: CMakeLists.txt
sandbox/: CMakeLists.txt  Sandbox.cpp
(+289 files in other folders)
