cmake_minimum_required(VERSION 3.20)
project(Hexen)

set(ENGINE_NAME HexenEngine CACHE INTERNAL "")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(RENDER_ENGINE_NAME RenderingEngine)
set(CORE_NAME core)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

option(BUILD_EDITOR "Build editor" ON)
option(BUILD_SHARED "Build as shared lib" OFF)
option(BUILD_STATIC "Build as static lib" ON)
option(BUILD_FOR_ANDROID "Build client as shared lib for Android" OFF)
option(ENABLE_PROFILING OFF)
option(ENABLE_SANITIZERS "Enable sanitizers" ON)
option(ENABLE_SANDBOX "Enable sandbox for testing" ON)

if(${BUILD_FOR_ANDROID})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
else()
    set(CMAKE_CXX_STANDARD 17)
endif(${BUILD_FOR_ANDROID})

if(BUILD_STATIC)
    add_library(${ENGINE_NAME} STATIC)
elseif(BUILD_SHARED)
    add_library(${ENGINE_NAME} SHARED)
endif()

add_subdirectory(engine)
add_subdirectory(client)

if(ENABLE_SANITIZERS)
    if (WIN32)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
    elseif (UNIX)
        option(ENABLE_ADDRESS_SANITIZE ON)
        if(ENABLE_ADDRESS_SANITIZE)
            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined")
        else ()
            option(ENABLE_THREAD_SANITIZE ON)
            if(ENABLE_THREAD_SANITIZE)
                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak -fsanitize=undefined")
            else ()
                option(ENABLE_LEAK_SANITIZE ON)
                if(ENABLE_LEAK_SANITIZE)
                    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak -fsanitize=undefined")
                endif (ENABLE_LEAK_SANITIZE)
            endif ()
        endif (ENABLE_ADDRESS_SANITIZE)
    endif (WIN32)
endif (ENABLE_SANITIZERS)

if(MSVC)
    target_compile_options(${ENGINE_NAME} PRIVATE /W4)
else()
    target_compile_options(${ENGINE_NAME} PRIVATE -Wall -Wextra -Wpedantic)
endif()

set(SDL_IMAGE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/SDL_image/include/SDL3_image)
set(GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/glm)
set(SDL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/SDL/include)
set(JSON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/json/include)
set(CONTEXT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/boost_context/include)
set(RENDER_ENGINE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/src/graphics)
set(CORE_ENGINE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/src/core)
set(JSON_BuildTests OFF CACHE INTERNAL "")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/glm)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/SDL)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/SDL_image)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/json)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/boost_context)

if (ENABLE_OPENGL_SUPPORT)
    if (NOT ${BUILD_FOR_ANDROID})
        add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/glew-cmake)
        set(GLEW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/engine/submodules/glew-cmake/include)
        target_include_directories(${RENDER_ENGINE_NAME} PUBLIC ${GLEW_INCLUDE_DIR})
    endif (NOT ${BUILD_FOR_ANDROID})
endif ()

target_link_libraries(${ENGINE_NAME} PUBLIC ${CORE_NAME} ${RENDER_ENGINE_NAME})

include_directories(${SDL_IMAGE_INCLUDE_DIR})
include_directories(${GLM_INCLUDE_DIR})
include_directories(${SDL_INCLUDE_DIR})
include_directories(${IMGUI_INCLUDE_DIR})
include_directories(${GLEW_INCLUDE_DIR})
include_directories(${JSON_INCLUDE_DIR})
include_directories(${CONTEXT_INCLUDE_DIR})

if (${ENABLE_PROFILING})
        add_definitions(-DTRACY_ENABLE=1)
        if(WIN32)
                target_link_libraries(${EDITOR_NAME}  wsock32 ws2_32 -ldbghelp )
        endif()
endif()

if(BUILD_EDITOR)
	set(IMGUI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/editor/submodules/imgui)
	add_subdirectory(editor)
endif()

if(${ENABLE_SANDBOX})
    add_subdirectory(sandbox)
endif (${ENABLE_SANDBOX})
